[feat]: added auth with google and normal

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,9 @@
 		<meta charset="utf-8" />
 		<title>AdminPro</title>
 		<base href="/" />
+		<script src="https://apis.google.com/js/platform.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
+		<meta name="google-signin-client_id" content="254893407351-ouvunt9bvdrv51s2b32ompeb9mpbcd00.apps.googleusercontent.com">
 		<!-- Favicon icon -->
 		<link
 			rel="icon"
